# libqoi

./: .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake  LICENSE  README.md  unix_compile.config
.github/: FUNDING.yml
include/qoi/: qoi.hpp
src/: main.cpp  qoi.cpp
tests/: benchmark.cpp  catch.cpp  qoi_fuzz.cpp  qoi_tests.cpp
